# Corpo_Fractum

./: Cargo.toml  README.md  install_deps.sh
bench/baselines/: .gitkeep  latest.json
crates/rustdec-analysis/: Cargo.toml  README.md
crates/rustdec-analysis/src/: callgraph.rs  cfg.rs  dominance.rs  functions.rs  lib.rs  string_recovery.rs  structure.rs
crates/rustdec-bench/: Cargo.toml  README.md
crates/rustdec-bench/src/: compare.rs  corpus.rs  main.rs  metrics.rs  model.rs  runner.rs
crates/rustdec-codegen/: Cargo.toml  README.md
crates/rustdec-codegen/src/: c.rs  cpp.rs  lib.rs  libc_signatures.rs  rust.rs  syscalls.rs
crates/rustdec-disasm/: Cargo.toml  README.md
crates/rustdec-disasm/src/: lib.rs
crates/rustdec-ir/: Cargo.toml  README.md
crates/rustdec-ir/src/: lib.rs
crates/rustdec-lift/: Cargo.toml  README.md
crates/rustdec-lift/src/: frame.rs  lib.rs  x86.rs
crates/rustdec-loader/: Cargo.toml  README.md
crates/rustdec-loader/src/: arch.rs  binary.rs  dwarf.rs  lib.rs  strings.rs  symbols.rs
crates/rustdec-loader/src/loaders/: elf.rs  macho.rs  pe.rs
crates/rustdec-loader/tests/: dwarf_tests.rs
crates/rustdec-lua/: Cargo.toml  README.md  lib.rs
crates/rustdec-lua/src/: hooks.rs
crates/rustdec-tests/: Cargo.toml
documentation/EN_IR/: analysis.md  architecture.md  cli.md  codegen.md  gui.md  index.md  ir.md  lift.md
documentation/FR_CA/: analysis.md  architecture.md  cli.md  codegen.md  gui.md  index.md  ir.md  lift.md
rustdec-cli/: Cargo.toml  README.md
rustdec-cli/src/: main.rs
rustdec-gui/: Cargo.toml  README.md
rustdec-gui/src/: app.rs  bridge.rs  log_layer.rs  main.rs  splash.rs  style.css
rustdec-gui/src/ui/: code.rs  console.rs  explorer.rs  graph.rs  mod.rs
scripts/: build_test_binaries.sh
tests/: LICENSE  analysis_tests.rs  codegen_tests.rs  disasm_tests.rs  integration_tests.rs  ir_tests.rs  loader_tests.rs
tests/tests_binaries/hello_world/: hello_world
tests/tests_binaries/retrieve_argc/: retrieve_argc.ELF_x8664  retrieve_argc.c
tests/tests_binaries/simple_array_manipulation/: simple_array_manipulation.ELF_x8664  simple_array_manipulation.c
tests/tests_binaries/simple_if/: simple_if.ELF_x8664  simple_if.c
tests/tests_binaries/simple_if_argv/: simple_if_argv.ELF_x8664  simple_if_argv.c
