[workspace]
members = [
    "crates/rustdec-loader",
    "crates/rustdec-lift",
    "crates/rustdec-disasm",
    "crates/rustdec-ir",
    "crates/rustdec-analysis",
    "crates/rustdec-codegen",
    "crates/rustdec-tests",
    "crates/rustdec-bench",
    "rustdec-cli",
    "rustdec-gui",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Corpo Fractum Contributors"]
license     = "GPL 3.0"
rust-version = "1.78"

[workspace.dependencies]
# Binary parsing
goblin = { version = "^0.10", default-features = false, features = ["elf64", "elf32", "pe32", "pe64", "mach64", "mach32", "te", "endian_fd"] }
gimli   = { version = "0.31", default-features = false, features = ["read", "endian-reader"] }

# Disassembly
capstone = "0.12"

# Graph structures (CFG, call graph)
petgraph = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Parallelism
rayon = "1"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Error handling
thiserror = "1"
anyhow    = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
rustdec-loader   = { path = "crates/rustdec-loader" }
rustdec-disasm   = { path = "crates/rustdec-disasm" }
rustdec-ir       = { path = "crates/rustdec-ir" }
rustdec-lift     = { path = "crates/rustdec-lift" }
rustdec-analysis = { path = "crates/rustdec-analysis" }
rustdec-codegen  = { path = "crates/rustdec-codegen" }

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
strip     = "debuginfo"

[profile.dev]
opt-level = 1   # keep debug fast enough to be usable
