[package]
name        = "rustdec-cli"
description = "CLI interface for Corpo Fractum"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

[[bin]]
name = "corpo-fractum-cli"
path = "src/main.rs"

[features]
console-bottom = []
console-tab    = []

[dependencies]
rustdec-loader.workspace   = true
rustdec-disasm.workspace   = true
rustdec-ir.workspace       = true
rustdec-analysis.workspace = true
rustdec-codegen.workspace  = true

cairo-rs      = "0.20"
glib          = "0.20"
async-channel = "2"

tokio.workspace  = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace  = true
anyhow.workspace = true
