[package]
name        = "rustdec-cli"
description = "Command-line interface for Corpo Fractum"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[[bin]]
name = "corpo-fractum-cli"
path = "src/main.rs"

[dependencies]
rustdec-loader.workspace   = true
rustdec-disasm.workspace   = true
rustdec-ir.workspace       = true
rustdec-analysis.workspace = true
rustdec-codegen.workspace  = true

clap = { version = "4", features = ["derive"] }

tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
