[package]
name        = "rustdec-analysis"
description = "CFG construction and static analysis for Corpo Fractum Core (decompiler framework)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

# License (LGPL core)
license-file      = "LICENSE"

# --- crates.io metadata ---
repository = "https://github.com/LaFonderieRS/Corpo_Fractum"
homepage   = "https://github.com/LaFonderieRS/Corpo_Fractum"
#documentation = "https://docs.rs/rustdec-analysis"
readme     = "README.md"

authors = ["La Fonderie <contact@lafonderie.studio>"]

keywords = [
    "reverse-engineering",
    "decompiler",
    "binary-analysis",
    "cfg",
    "static-analysis"
]

categories = [
    "development-tools",
    "compilers"
]

[dependencies]
rustdec-loader.workspace  = true
rustdec-disasm.workspace  = true
rustdec-ir.workspace      = true
rustdec-lift.workspace    = true
petgraph.workspace        = true
rayon.workspace           = true
thiserror.workspace       = true
tracing.workspace         = true
serde.workspace           = true

[features]
default = []
bench   = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
