[package]
name        = "rustdec-codegen"
description = "Code generation backends (C, C++, Rust) for RustDec"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rustdec-ir.workspace      = true
rustdec-analysis.workspace = true
thiserror.workspace       = true
serde.workspace           = true
tracing.workspace         = true
