[package]
name        = "rustdec-disasm"
description = "Multi-architecture disassembler for RustDec"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rustdec-loader.workspace = true
capstone.workspace       = true
thiserror.workspace      = true
serde.workspace          = true
tracing.workspace        = true
