[package]
name        = "rustdec-lift"
description = "x86-64 instruction lifter: ASM → SSA IR"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true

[dependencies]
rustdec-disasm.workspace  = true
rustdec-ir.workspace      = true
petgraph.workspace        = true
thiserror.workspace       = true
tracing.workspace         = true
