[package]
name             = "rustdec-tests"
description      = "Integration and unit tests for the full RustDec pipeline"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true
publish = false

[dev-dependencies]
rustdec-loader.workspace   = true
rustdec-disasm.workspace   = true
rustdec-ir.workspace       = true
rustdec-lift.workspace     = true
rustdec-analysis.workspace = true
rustdec-codegen.workspace  = true

# ── Test targets ──────────────────────────────────────────────────────────────
# Files live in the workspace-root tests/ directory; we reference them by path
# so they stay co-located with the project rather than buried inside a crate.

[[test]]
name = "integration_tests"
path = "../../tests/integration_tests.rs"

[[test]]
name = "ir_tests"
path = "../../tests/ir_tests.rs"

[[test]]
name = "loader_tests"
path = "../../tests/loader_tests.rs"

[[test]]
name = "disasm_tests"
path = "../../tests/disasm_tests.rs"

[[test]]
name = "analysis_tests"
path = "../../tests/analysis_tests.rs"

[[test]]
name = "codegen_tests"
path = "../../tests/codegen_tests.rs"
